--- a/src/widgets/Main/Intro/Intro.scss
+++ b/src/widgets/Main/Intro/Intro.scss
@@ -2,6 +2,7 @@
   margin-bottom: 75px;
   // .intro__content
   &__content {
+    padding-top: 100px;
     display: flex;
     justify-content: space-between;
     align-items: center;
