--- a/src/widgets/Main/Main.scss
+++ b/src/widgets/Main/Main.scss
@@ -1,9 +1,3 @@
 main {
-  margin-top: 150px;
-}
-
-@media (max-width: 768px) {
-  main {
-    margin-top: 50px;
-  }
+  margin-top: 85px;
 }
